# ETe

src/cmake/: CMakeLists.txt
src/cmake/sources/: cgame.cmake  client.cmake  game.cmake  jpeg.cmake  qcommon.cmake  renderer_common.cmake  renderer_gl.cmake  renderer_vk.cmake  sdl.cmake  server.cmake  splines.cmake  ui.cmake
src/cmake/system/: clang.cmake  gcc.cmake  linux.cmake  win-msvc.cmake
src/qcommon/: q_shared.h
src/renderervk/shaders/: compile.sh
src/win32/msvc2017/: Splines.vcxproj  cgame.vcxproj  ete-ded.vcxproj  ete.vcxproj  game.vcxproj  libjpeg.vcxproj  renderer.vcxproj  renderervk.vcxproj  steam.vcxproj  ui.vcxproj
